# ya_map_scrapper

./: .gitignore  README.md  config.py.example  link_scrap.py  main.py  pyproject.toml  scroll.py
data/: database_manager.py
logging_path/: logger_module.py
models/: scroller.py
scrapper/: bypass.py  proxy_rotator.py  scrapper.py
