[tool.poetry]
name = "ya-map-scrapper"
version = "0.1.0"
description = ""
authors = ["Maksim Evdokimov <maksorli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "23.2.0"
beautifulsoup4 = "4.12.3"
black = "24.4.2"
blinker = "1.4"
brotli = "1.1.0"
bs4 = "0.0.2"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cryptography = "42.0.8"
exceptiongroup = "1.2.1"
h11 = "0.14.0"
h2 = "4.1.0"
hpack = "4.0.0"
hyperframe = "6.0.1"
idna = "3.7"
kaitaistruct = "0.10"
lxml = "5.2.2"
mypy-extensions = "1.0.0"
outcome = "1.3.0.post0"
packaging = "24.1"
pathspec = "0.12.1"
platformdirs = "4.2.2"
pyasn1 = "0.6.0"
pycparser = "2.22"
pyopenssl = "24.1.0"
pyparsing = "3.1.2"
pysocks = "1.7.1"
python-dotenv = "1.0.1"
requests = "2.32.3"
selenium = "4.22.0"
selenium-wire = "5.1.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
tomli = "2.0.1"
trio = "0.26.0"
trio-websocket = "0.11.1"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
webdriver-manager = "4.0.1"
websocket-client = "1.8.0"
wsproto = "1.2.0"
zstandard = "0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
